# LayerForge-X-final

./: .gitignore  CITATION.cff  LICENSE  Makefile  PROJECT_MANIFEST.json  README.md  pyproject.toml  pytest.ini  requirements-export.txt  requirements-models.txt  requirements.txt
configs/: ade20k_mask2former.yaml  best_score.yaml  cutting_edge.yaml  diode_depthpro.yaml  fast.yaml  frontier.yaml  qwen_hybrid.yaml  recursive_peeling.yaml  world_best.yaml
docs/: 404.html  BENCHMARKING.md  BENCHMARKING_PROTOCOL_FINAL.md  DEFENSE_SUMMARY.md  FIGURES.md  FINAL_PROJECT_SPEC.md  FRONTIER_WORKFLOW.md  IMPLEMENTATION_STATUS_2026_04_22.md  LITERATURE_REVIEW.md  METHOD.md  NEXT_REVIEW_CHECKLIST_2026_04_22.md  NOVELTY_AND_ABLATIONS_FINAL.md  PRODUCT_ARCHITECTURE_AND_LAUNCH.md  PUBLIC_BENCHMARKS.md  PUBLIC_BENCHMARKS_2026_04_22.md  QWEN_IMAGE_LAYERED_COMPARISON.md  README.md  REFERENCES.md  REPORT_OUTLINE.md  REPORT_STRUCTURE.md  REPORT_TABLES.md  RESULTS_SUMMARY_2026_04_19.md  RESULTS_SUMMARY_CURRENT.md  SUBMISSION_INDEX.md  VIVA_NOTES.md  WORLD_BEST_AND_DALG_V1_1.md  about.html  documents.html  index.html  reader.html  webui.html
examples/: README.md
models/: README.md  order_ranker_fast.json
report_artifacts/: README.md  command_log.md
schemas/: dalg.schema.json
scripts/: build_pages_artifact.py  build_report_docx.py  build_site_data.py  collect_run_metrics.py  download_ade20k.py  download_coco_panoptic_val.py  download_diode_val.py  export_report_artifacts.py  generate_report_figures.py  make_submission_zip.py  make_synthetic_dataset.py  make_transparent_dataset.py  run_curated_comparison.py  run_editability_suite.py  run_effects_demo.py  run_extract_benchmark.py  run_frontier_comparison.py  run_grid.py  run_public_benchmarks_if_present.py  run_qwen_image_layered.py  run_transparent_benchmark.py  score_qwen_raw_layers.py
tests/: test_ade20k_benchmark.py  test_amodal_hidden.py  test_autotune.py  (+49 more)
(+91 files in other folders)
